[package]
name = "rusted-drums"
version = "0.1.0"
authors = ["Dmitry Polyanitsa <coffeecup.winner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = { version = "0.5.1", default-features = false, features = ["std", "alloc"] }
mlua = { version = "0.5.1", features = ["lua54", "vendored"] }
